// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PickitemMultiselect /> basic example 1`] = `
<div
  className="xui-pickitem--body"
  data-automationid={undefined}
  onClick={undefined}
  onFocus={undefined}
  onKeyDown={undefined}
  onMouseOver={undefined}
  role="presentation"
>
  <label
    className="xui-pickitem-multiselect--checkbox xui-styledcheckboxradio"
    data-automationid={undefined}
    onClick={[Function]}
    onKeyDown={undefined}
    role="presentation"
  >
    <input
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby="testPickitemCheckboxId"
      className="xui-styledcheckboxradio--input"
      data-automationid={undefined}
      defaultChecked={false}
      disabled={false}
      name={undefined}
      onChange={[Function]}
      onClick={[Function]}
      required={false}
      tabIndex={-1}
      type="checkbox"
      value={undefined}
    />
    <div
      className="xui-styledcheckboxradio--checkbox xui-pickitem--input"
      data-automationid={undefined}
    />
    <span
      className="xui-styledcheckboxradio--label xui-pickitem--text xui-pickitem-multiselect--label"
      data-automationid={undefined}
      htmlFor={undefined}
      id="testPickitemCheckboxId"
    >
      <span
        className=""
        data-automationid={undefined}
      >
        Item
      </span>
    </span>
  </label>
</div>
`;

exports[`<PickitemMultiselect /> is selected, adds truncation and custom classes 1`] = `
<div
  className="xui-pickitem--body"
  data-automationid={undefined}
  onClick={undefined}
  onFocus={undefined}
  onKeyDown={undefined}
  onMouseOver={undefined}
  role="presentation"
>
  <label
    className="custom-checkbox xui-pickitem-text-truncated xui-pickitem-multiselect--checkbox xui-styledcheckboxradio"
    data-automationid={undefined}
    onClick={[Function]}
    onKeyDown={undefined}
    role="presentation"
  >
    <input
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby="testPickitemCheckboxId"
      checked={true}
      className="xui-styledcheckboxradio--input"
      data-automationid={undefined}
      disabled={false}
      name={undefined}
      onChange={[Function]}
      onClick={[Function]}
      required={false}
      tabIndex={-1}
      type="checkbox"
      value={undefined}
    />
    <div
      className="xui-styledcheckboxradio--checkbox xui-pickitem--input"
      data-automationid={undefined}
    />
    <span
      className="xui-styledcheckboxradio--label xui-pickitem--text xui-pickitem-multiselect--label xui-pickitem-text-truncated"
      data-automationid={undefined}
      htmlFor={undefined}
      id="testPickitemCheckboxId"
    >
      <span
        className="xui-pickitem-text-truncated"
        data-automationid={undefined}
      >
        <span
          className="xui-pickitem-text-truncated"
        >
          Item
        </span>
      </span>
    </span>
  </label>
</div>
`;
